<resources>
    <string name="app_name">Загадка</string>
    <string name="msg_show_str">Отгадай!</string>
    <string name="hint_show_str_2">Задумано двузначное число.</string>
    <string name="hint_show_str_3">Задумано трёхзначное число.</string>
    <string name="hint_show_str_4">Задумано четырёхзначное число.</string>
    <string name="guess_str">Отгадать</string>
    <string name="attempts_left_str">5</string>
    <string name="restart_str">Заново</string>
    <string name="guessed_str">Отгадано</string>
    <string name="wishYou">Поздравляю!</string>
    <string name="defeat">Вы проиграли!</string>
    <string name="hint_more">Загаданное число больше твоего.</string>
    <string name="hint_less">Загаданное число меньше твоего.</string>
    <string name="settings">Диапазон от...</string>
    <string name="ok">Да</string>
    <string name="cancel">Нет</string>
    <string name="clear">Очистить</string>
    <string-array name="diaps_array">
        <item>10-99</item>
        <item>100-999</item>
        <item>1000-9999</item>
    </string-array>
    <string name="settingsMenu">Настройки</string>
    <string name="aboutDeveloper">О разработчике</string>
    <string name="about_me">Обо мне</string>
    <string name="full_name">Коноз Вера Григорьевна</string>
    <string name="date_of_birth">Дата рождения: 27.05.2004</string>
    <string name="hobby">Хобби: занятия пауэрлифтингом в течение 3-ёх лет, написание книги и стихотворений.</string>
    <string name="copy_text">Скопировать</string>
    <string name="inset_text">Вставить</string>
    <string name="copy_message">Данные успешно сохранены</string>
    <string name="share_info">Поделиться</string>
    <string name="attempts_left_message">Количество попыток:</string>
    <string name="guess_num_message">Загаданное число:</string>
    <string name="result_message">Результат:</string>
    <string name="result_message_succesfully">Вы выйграли!</string>
    <string name="result_message_defeat">Вы пройграли!</string>
    <string name="save_info">Сохранить</string>
    <string name="incorret_data">Неправильные данные!</string>
    <string name="player_name_string">Введите имя игрока</string>
    <string name="player_name">Имя игрока</string>
    <string name="player_name_show">Суперигрок</string>
    <string name="empty_string_msg">Пустая строка!</string>
    <string name="error_notification_msg">Невозможно отправить уведомление!</string>
    <string name="error_permission_notification">Вы не дали права на отправку уведомлений!</string>
    <string name="error_change_name">Имя пользователя можно изменить только в начале игры!</string>
    <string name="error_message_google_keep">Не установлено приложение Google Keep!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>