<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/developer_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2sp"
            android:fontFamily="sans-serif"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="290dp"
            android:layout_height="292dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:scaleType="centerCrop"
            android:text="@string/about_me"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="341dp"
            android:layout_height="133dp"
            android:fontFamily="sans-serif"
            android:text="@string/hobby"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>